# lodestone_parser

./: .gitattributes  Cargo.toml  README.md
html/Characters/: A.html  Duvivi.html  Sakae.html
html/FCs/: Cobra.html  Rose.html
html/Linkshells/: lala world.html
html/Searches/: Character.html  FreeCompany.html  Invalid page.html  Linkshell.html  No results.html
schemas/: Character.md  CharacterSearch.md  FreeCompany.md  FreeCompanySearch.md
src/: error.rs  lib.rs  logic.rs  models.rs  util.rs
src/logic/: character.rs  free_company.rs  linkshell.rs  search.rs
src/logic/search/: character.rs  free_company.rs  linkshell.rs
src/models/: character.rs  free_company.rs  linkshell.rs  search.rs
src/models/search/: character.rs  free_company.rs  linkshell.rs
src/util/: serde.rs
src/util/serde/: multi_url.rs  opt_u64_str.rs  u64_str.rs
