[package]
name = "lodestone_parser"
version = "0.1.1"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

edition = "2018"

[features]
default = ["logic"]

logic = [
  "cssparser",
  "failure",
  "lazy_static",
  "scraper",
]

[dependencies]
cssparser = { version = "0.24", optional = true }
failure = { version = "0.1", optional = true }
lazy_static = { version = "1", optional = true }
scraper = { version = "0.9", optional = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "1"
url_serde = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.ffxiv_types]
version = "1"
default-features = false
features = ["worlds", "races", "clans", "guardians", "with_serde"]
