[package]
name = "lodestone_parser"
version = "0.1.1"
authors = ["Anna Clemens <git@annaclemens.io>"]

edition = "2018"

[features]
default = ["logic", "with_serde"]

logic = [
  "cssparser",
  "failure",
  "lazy_static",
  "scraper",
  "with_serde",
]
with_serde = [
  "serde",
  "serde_derive",
  "ffxiv_types/with_serde",
  "chrono/serde",
  "url/serde"
]

[dependencies]
chrono = "0.4"
cssparser = { version = "0.27", optional = true }
failure = { version = "0.1", optional = true }
lazy_static = { version = "1", optional = true }
scraper = { version = "0.12", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
url = "2"

[dependencies.ffxiv_types]
version = "1"
default-features = false
features = ["worlds", "races", "clans", "guardians"]
